<resources>
    <string name="app_name">HITIT PRO</string>
    <string name="hit_it_pro">HITIT PRO</string>
    <string name="draweropem">open</string>
    <string name="drawerclose">close</string>
    <string name="description_of_structure">Description of Structure</string>
    <string name="structure_observations">Structure Observations</string>
    <string name="recommendations_observations">Recommendations / Observations</string>
    <string name="description_of_roofing">Description of Roofing</string>
    <string name="roofing_observations">Roofing Observations</string>
    <string name="description_of_exterior">Description of Exterior</string>
    <string name="exterior_observations">Exterior Observations</string>
    <string name="description_of_heating">Description of Heating</string>
    <string name="heating_observations">Heating Observations</string>
    <string name="description_of_cooling_heat_pumps">Description of Cooling/Heat Pumps</string>
    <string name="cooling_heat_pump_observations">Cooling/Heat Pump Observations</string>
    <string name="recommendations_observations_of_cooling_heat_pumps">Recommendations / Observations of Cooling/Heat Pumps</string>
    <string name="description_of_electrical">Description of Electrical</string>
    <string name="electrical_observations">Electrical Observations</string>
    <string name="recommendations_observations_of_electrical">Recommendations / Observations of Electrical</string>
    <string name="roof_covering">ROOF COVERING</string>
    <string name="roof_flashing">ROOF FLASHING</string>
    <string name="chimneys">CHIMNEYS</string>
    <string name="roof_drainage_system">ROOF DRAINAGE SYSTEM</string>
    <string name="skylights">SKYLIGHTS</string>
    <string name="method_of_inspection">METHOD OF INSPECTION</string>
    <string name="sloped_roofing">SLOPED ROOFING</string>
    <string name="flat_roofing">FLAT ROOFING</string>
    <string name="flashing">FLASHING</string>
    <string name="gutters_downspouts">GUTTERS/DOWNSPOUTS</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="wall_covering">WALL COVERING</string>
    <string name="eaves_soffits_fascia">EAVES/SOFFITS/FASCIA</string>
    <string name="exterior_doors">EXTERIOR DOORS</string>
    <string name="windows_door_frames_trim">WINDOWS/DOOR FRAMES/TRIM</string>
    <string name="entry_driveways">ENTRY DRIVEWAYS</string>
    <string name="entry_walks_patios">ENTRY WALKS/PATIOS</string>
    <string name="porch_deck_steps_railings">PORCH/DECK/STEPS/RAILINGS</string>
    <string name="overhead_garage_door_s">OVERHEAD GARAGE DOOR(S)</string>
    <string name="surface_drainage">SURFACE DRAINAGE</string>
    <string name="retaining_walls">RETAINING WALLS</string>
    <string name="fencing">FENCING</string>
    <string name="exterior_walls">EXTERIOR WALLS</string>
    <string name="eaves">EAVES</string>
    <string name="exterior_doors_windows">EXTERIOR DOORS/WINDOWS</string>
    <string name="garage">GARAGE</string>
    <string name="driveway">DRIVEWAY</string>
    <string name="exterior_steps_walkways">EXTERIOR STEPS/WALKWAYS</string>
    <string name="deck">DECK</string>
    <string name="lot_drainage">LOT DRAINAGE</string>
    <string name="landscaping">LANDSCAPING</string>
    <string name="retaining_wall">RETAINING WALL</string>
    <string name="energy_source">ENERGY SOURCE</string>
    <string name="heating_system_type">HEATING SYSTEM TYPE</string>
    <string name="vents_flues_chimneys">VENTS/FLUES/CHIMNEYS</string>
    <string name="other_components">OTHER COMPONENTS</string>
    <string name="heat_distribution_methods">HEAT DISTRIBUTION METHODS</string>
    <string name="furnace">FURNACE</string>
    <string name="supply_air_ductwork">SUPPLY AIR DUCTWORK</string>
    <string name="boiler">BOILER</string>
    <string name="combustion_exhaust">COMBUSTION/EXHAUST</string>
    <string name="furnace_chimneys">FURNACE/CHIMNEYS</string>
    <string name="thermostats">THERMOSTATS</string>
    <string name="central_system_type">CENTRAL SYSTEM TYPE</string>
    <string name="through_wall_equipment">THROUGH WALL EQUIPMENT</string>
    <string name="central_air_conditioning">CENTRAL AIR CONDITIONING</string>
    <string name="heat_pumps">HEAT PUMPS</string>
    <string name="evaporator_coolers">EVAPORATOR COOLERS</string>
    <string name="house_fans">HOUSE FANS</string>
    <string name="size_of_service">SIZE OF SERVICE</string>
    <string name="service_drop">SERVICE DROP</string>
    <string name="service_entrance_conductors">SERVICE ENTRANCE CONDUCTORS</string>
    <string name="main_disconnect">MAIN DISCONNECT</string>
    <string name="grounding">GROUNDING</string>
    <string name="service_panel">SERVICE PANEL</string>
    <string name="sub_panel">SUB-PANEL</string>
    <string name="wiring">WIRING</string>
    <string name="wiring_method">WIRING METHOD</string>
    <string name="switches_receptacles">SWITCHES/RECEPTACLES</string>
    <string name="gfci">GFCI</string>
    <string name="smoke_and_co_detectors">SMOKE AND CO DETECTORS</string>
    <string name="service_entrance">SERVICE ENTRANCE</string>
    <string name="main_panel">MAIN PANEL</string>
    <string name="distribution_wiring">DISTRIBUTION WIRING</string>
    <string name="outlets">OUTLETS</string>
    <string name="switches">SWITCHES</string>
    <string name="lights_ceiling_fans">LIGHTS/CEILING FANS</string>
    <string name="smoke_co_detectors">SMOKE/CO DETECTORS</string>
    <string name="columns">COLUMNS</string>
    <string name="foundation">FOUNDATION</string>
    <string name="floor_structure">FLOOR STRUCTURE</string>
    <string name="wall_structure">WALL STRUCTURE</string>
    <string name="ceiling_structure">CEILING STRUCTURE</string>
    <string name="roof_structure">ROOF STRUCTURE</string>
    <string name="foundations">FOUNDATIONS</string>
    <string name="crawl_spaces">CRAWL SPACES</string>
    <string name="floors">FLOORS</string>
    <string name="roof">ROOF</string>
    <string name="review">Review</string>
    <string name="clients">Clients</string>
    <string name="templates">Templates</string>
    <string name="sections">Sections</string>
    <string name="incomplete_items">Incomplete Items</string>
    <string name="structure">Structure</string>
    <string name="roofing">Roofing</string>
    <string name="heating">Heating</string>
    <string name="cooling">Cooling</string>
    <string name="electrical">Electrical</string>
    <string name="exterior">Exterior</string>
    <string name="_0">0</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="firt_name">Firt Name</string>
    <string name="username">Username</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="arrow">Arrow</string>
    <string name="text">Text</string>
    <string name="circle">Circle</string>
    <string name="upload">Upload</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_of_insulation_ventilation">DESCRIPTION OF INSULATION / VENTILATION</string>
    <string name="insulation_ventilation">Insulation / Ventilation:</string>
    <string name="attic_insulation">ATTIC INSULATION</string>
    <string name="exterior_wall_insulation">EXTERIOR WALL INSULATION</string>
    <string name="basement_wall_insulation">BASEMENT WALL INSULATION</string>
    <string name="crawl_space_insulation">CRAWL SPACE INSULATION</string>
    <string name="roof_ventilation">ROOF VENTILATION</string>
    <string name="crawl_space_ventilation">CRAWL SPACE VENTILATION</string>
    <string name="exhaust_fans_vents">EXHAUST FANS / VENTS</string>
    <string name="insulation_ventilation_observations">Insulation / Ventilation Observations</string>
    <string name="recommendations_observations_of_insulation_ventilation">Recommendations / Observations of Insulation / Ventilation</string>
    <string name="attic_and_roof">Attic and Roof</string>
    <string name="compressed_insulation">Compressed Insulation</string>
    <string name="basement">Basement</string>
    <string name="crawl_space">Crawl Space</string>
    <string name="vapor_retarders">VAPOR RETARDERS</string>
    <string name="description_of_plumbing">DESCRIPTION OF PLUMBING</string>
    <string name="water_supply_source">WATER SUPPLY SOURCE</string>
    <string name="service_pipe_to_house">SERVICE PIPE TO HOUSE</string>
    <string name="main_water_valve_location">MAIN WATER VALVE LOCATION</string>
    <string name="interior_supply_piping">INTERIOR SUPPLY PIPING</string>
    <string name="waste_system">WASTE SYSTEM</string>
    <string name="waste_system_plumbing">waste_system</string>
    <string name="water_heater">WATER HEATER</string>
    <string name="fuel_storage_distribution">FUEL STORAGE/DISTRIBUTION</string>
    <string name="fuel_shut_off_valves">FUEL SHUT-OFF VALVES</string>
    <string name="other_components_plumbing">OTHER COMPONENTS</string>
    <string name="plumbing_observations">Plumbing Observations</string>
    <string name="recommendations_observations_of_plumbing">Recommendations / Observations of Plumbing:</string>
    <string name="water_heater_plimbing">WATER HEATER</string>
    <string name="gas_piping">GAS PIPING</string>
    <string name="supply_piping">SUPPLY PIPING</string>
    <string name="dwv_piping">DWV PIPING</string>
    <string name="fixtures">FIXTURES</string>
    <string name="sump_pump">SUMP PUMP</string>
    <string name="waste_ejector_pump">WASTE EJECTOR PUMP</string>
    <string name="water_heater_plumbing">Water Heater</string>
    <string name="gas_piping_plumbing">Gas Piping</string>
    <string name="supply_plumbing">Supply Plumbing</string>
    <string name="dwv_plumbing">DWV Plumbing</string>
    <string name="description_of_appliances">DESCRIPTION OF APPLIANCES</string>
    <string name="appliances_tested">APPLIANCES TESTED</string>
    <string name="laundry_facility">LAUNDRY FACILITY</string>
    <string name="other_components_tested">OTHER COMPONENTS TESTED</string>
    <string name="appliance_observations">Appliance Observations:</string>
    <string name="recommendations_observations_of_appliances">Recommendations / Observations of Appliances:</string>
    <string name="electric_range">Electric Range</string>
    <string name="gas_range">Gas Range</string>
    <string name="built_in_electric_oven">Built-In Electric Oven</string>
    <string name="electric_cooktop">Electric Cooktop</string>
    <string name="microwave_oven">Microwave Oven</string>
    <string name="dishwasher">Dishwasher</string>
    <string name="waste_disposer">Waste Disposer</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="wine_cooler">Wine Cooler</string>
    <string name="trash_compactor">Trash Compactor</string>
    <string name="clothes_washer">Clothes Washer</string>
    <string name="clothes_dryer">Clothes Dryer</string>
    <string name="cooktop_exhaust_fan">Cooktop Exhaust Fan</string>
    <string name="central_vacuum">Central Vacuum</string>
    <string name="door_bell">Door Bell</string>
    <string name="gas_cooktop">Gas Cooktop</string>
    <string name="action_line">Line</string>
    <string name="action_smoothline">Pen</string>
    <string name="action_square">Square</string>
    <string name="action_circle">Circle</string>
    <string name="action_rectangle">Rectangle</string>
    <string name="action_triangle">Triangle</string>
    <string name="action_arrow">Arrow</string>
    <string name="action_text">Text</string>
</resources>