<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/White">

    <ScrollView
        android:id="@+id/containerScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonContainer"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:layout_marginRight="3dp"
                android:text="@string/description_of_appliances"
                android:textStyle="bold"
                style="@style/textview_heading"/>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appliances_tested"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/appliances_tested"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/laundry_facility"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/laundry_facility"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_components_tested"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/other_components_tested"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/appliance_observations"
                android:textStyle="bold"
                style="@style/textview_heading"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appliance_observations"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/appliance_observations"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/recommendations_observations_of_appliances"
                android:textStyle="bold"
                style="@style/textview_heading"/>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/electric_range"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/electric_range"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gas_range"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/gas_range"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/built_in_electric_oven"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/built_in_electric_oven"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/electric_cooktop"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/electric_cooktop"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gas_cooktop"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/gas_cooktop"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/microwave_oven"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/microwave_oven"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dishwasher"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/dishwasher"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waste_disposer"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/waste_disposer"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>


            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refrigerator"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif"
                android:id="@+id/refrigerator"
                android:background="@drawable/button_selector"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wine_cooler"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/wine_cooler"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trash_compactor"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/trash_compactor"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clothes_washer"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/clothes_washer"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clothes_dryer"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/clothes_dryer"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cooktop_exhaust_fan"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/cooktop_exhaust_fan"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/central_vacuum"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/central_vacuum"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/door_bell"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:id="@+id/door_bell"
                    android:background="@drawable/button_selector"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/White"
        android:weightSum="5"
        >

        <Button
            android:id="@+id/back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/previous_selector"
            />

        <TextView
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:text="Step10 out of step 11"
            android:textSize="20sp"
            android:layout_weight="3"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:background="@color/White"
            android:textStyle="bold"

            />

        <Button
            android:id="@+id/next"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/next_selector"
            />

    </LinearLayout>

</RelativeLayout>